Add Geo search with Dynamo GSI
